# qftcs

./: .gitignore  README.md  explanation.txt  notes.txt  pyproject.toml
black_hole_simulator/: CODEBASE_OVERVIEW.md  RUST_PYTHON_MIGRATION_PLAN.md  black_hole.cpp
black_hole_simulator/vs_code/: launch.json  settings.json
clifford-master/clifford/: _numba_utils.py
docs/: build_debugging_notes.md  user_guide.md
examples/: algebra_example.py  antidesitter_example.py  canonical_quantization_example.py  category_framework_example.py  causality_example.py  charged_quantization_example.py  charged_scalar_field_example.py  charged_scalar_stress_energy_example.py  clifford_algebra_example.py  conservation_laws_example.py  desitter_example.py  em_field_example.py  em_stress_energy_example.py  flrw_scalar_field_tutorial.py  ga_kerr_example.py  kerr_example.py  minkowski_example.py  numerical_quantum_state_tutorial.py  plot_schwarzschild_example.py  quantum_state_usage_example.py  reissner_nordstrom_example.py  scalar_field_example.py  schwarzschild_scalar_field_tutorial.py  solve_radial_equation_example.py  state_example.py  stress_energy_tensor_example.py  symbolic_numerical_integration_example.py
rust/aqft_core/: Cargo.toml
rust/aqft_core/src/: field.rs  lib.rs  spacetime.rs
src/aqft/: __init__.py  algebra.py  field.py  quantum_state.py  spacetime.py  utils.py
src/aqft_curved/: __init__.py  algebra.py  field.py  quantization.py  spacetime.py  state.py
tests/: test_algebra.py  test_field.py  test_integration.py  test_spacetime.py  test_state.py  test_utils.py
(+22 files in other folders)
