[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aqft_curved"
version = "0.1.0"
description = "A library for Algebraic Quantum Field Theory in Curved Spacetime"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "sympy",
    "scipy",
    "pandas",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
