[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aqft"
version = "0.1.0"
description = "A library for Algebraic Quantum Field Theory in Curved Spacetime"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "sympy>=1.9",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]
